# suss_experiments

./: .gitignore  CHAMELEON_HOW_TO.txt  README.md  how to cold start.txt  workflow_statistics.py
benchmark_scripts/: install_everything_bare_metal.sh  run_benchmarks.py
extract_scripts/: count_results.py  extract_all_results.py  pretty_dict.py  tmp1  tmp2
plot_analyze_results_scripts/: mappings.py  plot_all_results.py  plot_basic_algorithms.py  plot_consolidated_noise.py  plot_multi_adaptation.py  plot_no_contention.py  plot_no_mitigation.py  plot_noise_mitigation.py  plot_noise_rank_histogram.py  plot_simulator_sophistication.py  plot_template.py  plot_utils.py
run_scripts/: run_all_simulations.py
run_scripts/network_versions/: dispachall.sh  dispacher.py  monitorAll.sh  server.py  theEvenLessHackyMonitor.sh  theNotQuiteAsHackyMonitor.sh  theSuperHackyMonitor.sh  worker.py
simulator/: Dockerfile
workflow_analyzer/: CMakeLists.txt
workflow_analyzer/src/: main.cpp
workflows/: 1000genome-chameleon-8ch-250k-001.json  blast-chameleon-medium-002.json  bwa-chameleon-large-003.json  epigenomics-chameleon-ilmn-4seq-50k-001.json  rnaseq-dirt02-001.json  rnaseq-nextflow-chameleon-001.json  soykb-chameleon-10fastq-20ch-001.json  srasearch-chameleon-10a-003.json  viralrecon-dirt02-001.json  viralrecon-nextflow-chameleon-001.json
